--- a/portfolio/experience.yaml
+++ b/portfolio/experience.yaml
@@ -2,8 +2,7 @@
 - 
         Poste: ~ Installateur de matériels audio et musical sur des concerts ~
         Entreprise: ~ Audio-Tech ~
-        début: ~ Du 6 Janvier 2020 ~
-        fin: ~ Au 25 Janvier 2020 ~
+        date: ~ Du 6 Janvier 2020 au 25 Janvier 2020 ~
         lieu: ~ Se situe au 36 Rue de Québec, 14000 Caen ~
         Contenu: ~ Son contenu est de me préparer à la vie professionnelle et d'approfondir mes connaissances pour les cours ~
 
@@ -11,8 +10,7 @@
 - 
         Poste: ~ Technicien systèmes d'alarmes et vidéo-surveillance ~
         Entreprise: ~ Telecoms Entreprises ~
-        début: ~ Du 25 Janvier 2021 ~
-        fin: ~ Au 19 Février 2021 ~
+        date: ~ Du 25 Janvier 2021 au 19 Février 2021 ~
         lieu: ~ Se situe au 4 Avenue de Cambridge, 14200 Herouville-Saint-Clair ~
         Contenu: ~ Son contenu est de me préparer à la vie professionnelle et d'approfondir mes connaissances pour les cours ~
 
@@ -20,8 +18,7 @@
 - 
         Poste: ~ Technicien et installateurs d'équipements électroménagers ~
         Entreprise: ~ Pulsat ~
-        début: ~ Du 07 Juin 2021 ~
-        fin: ~ Au 02 Juillet 2021 ~
+        date: ~ Du 07 Juin 2021 au 02 Juillet 2021 ~
         lieu: ~ Se situe au 3 Fgb d'Argentant, 61600 La Ferté-Macé ~
         Contenu: ~ Son contenu est de me préparer à la vie professionnelle et d'approfondir mes connaissances pour les cours ~
 
@@ -29,8 +26,7 @@
 - 
         Poste: ~ Technicien systèmes d'alarmes et vidéo-surveillance ~
         Entreprise: ~ Techniserv ~
-        début: ~ Du 22 Novembre 2021 ~
-        fin: ~ Au 17 Décembre 2021 ~
+        date: ~ Du 22 Novembre 2021 au 17 Décembre 2021 ~
         lieu: ~ Se situe au 1 Bis Chemin de la croix Vautier, 14980 Rots ~
         Contenu: ~ Son contenu est de me préparer à la vie professionnelle et d'approfondir mes connaissances pour les cours ~
 
@@ -38,8 +34,7 @@
 - 
         Poste: ~ Technicien systèmes d'alarmes et vidéo-surveillance ~
         Entreprise: ~ Techniserv ~
-        début: ~ Du 14 Mars 2022 ~
-        fin: ~ Au 8 Avril 2022 ~
+        début: ~ Du 14 Mars 2022 au 8 Avril 2022 ~
         lieu: ~ Se situe au 1 Bis Chemin de la croix Vautier, 14980 Rots ~
         Contenu: ~ Son contenu est de me préparer à la vie professionnelle et d'approfondir mes connaissances pour les cours ~
 
@@ -47,8 +42,7 @@ Travail d-été:
 -
         Poste: ~ Opérateur de production ~
         Entreprise: ~ Roval cosmétiques ~
-        début: ~ Du 03 Août 2022 ~
-        fin: ~ Au 22 Août 2022 ~
+        début: ~ Du 03 Août 2022 au 22 Août 2022 ~
         lieu: ~ Se situe à Rue des Sports, 61100 Flers ~
         Contenu: ~ Son contenu est de m'intégrer dans la vie professionnelle et pour gagner de l'argent ~
 
