--- a/portfolio/index.yaml
+++ b/portfolio/index.yaml
@@ -2,4 +2,4 @@ user:
     nom: LOIR
     prenom: Guillaume
 accroche:
-    phrase: Bienvenuuue sur mon site ;)
+    phrase: Bienvenue sur mon site ;)
